--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					project delivery success. Hire the best programmers at affordable prices. Our design-focused approach and
 					project execution processes help you to deliver the right solutions.
 				</p>
-				<button class="uk-button uk-button-default button-contact uk-margin-small-top">Contact Us
+				<button class="uk-button uk-button-default button-contact uk-margin-small-top">What we do
 				</button>
 			</div>
 			<div class="uk-width-1-2@m">
