--- a/index.html
+++ b/index.html
@@ -150,11 +150,9 @@
 					<img class="box-img" src="img/icon/design.svg" alt="">
 				</div>
 				<div>
-					<p class="title2">Discover</p>
-					<p class="txt">We shape brands through exploration, applying in-depth research to challenge
-						assumptions
-						at every
-						turn.
+					<p class="title2">Design</p>
+					<p class="txt">Our design approach is to simplify. We embrace the joy in creating something unique that
+						is easy for end users.
 					</p>
 				</div>
 			</div>
@@ -163,11 +161,9 @@
 					<img class="box-img" src="img/icon/build.svg" alt="">
 				</div>
 				<div>
-					<p class="title2">Discover</p>
-					<p class="txt">We shape brands through exploration, applying in-depth research to challenge
-						assumptions
-						at every
-						turn.
+					<p class="title2">Build</p>
+					<p class="txt">Using modern technologies, we build with efficiency and skill, creating flexible and
+						scalable business-driven solutions.
 					</p>
 				</div>
 			</div>
@@ -176,11 +172,9 @@
 					<img class="box-img" src="img/icon/deliver.svg" alt="">
 				</div>
 				<div>
-					<p class="title2">Discover</p>
-					<p class="txt">We shape brands through exploration, applying in-depth research to challenge
-						assumptions
-						at every
-						turn.
+					<p class="title2">Deliver</p>
+					<p class="txt">We take an iterative approach to both our work and our practice, always looking for ways
+						to improve what we do.
 					</p>
 				</div>
 			</div>
@@ -224,11 +218,9 @@
 						<div class="uk-card core core-2 uk-text-center uk-card-default">
 							<img class="uk-margin-large-top my-img uk-margin-large-bottom" src="img/main/core-2.svg" alt="">
 							<div class="">
-								<p class="service-title">Hire Dedicated Developers</p>
-								<p class="service-txt">Create your own team of developers for your software
-									development project on
-									short term, long term or permanent basis with guaranteed project delivery at affordable
-									prices.
+								<p class="service-title">Mobile Apps</p>
+								<p class="service-txt">We build intuitive and engaging Android, iOS and cross-platform apps for
+									businesses, consumers and enterprises that end users love and adapt to them very quickly.
 								</p>
 								<p class="uk-margin-top xx">
 								</p>
@@ -242,11 +234,9 @@
 						<div class="uk-card core core-1 uk-text-center uk-card-default">
 							<img class="uk-margin-large-top my-img uk-margin-large-bottom" src="img/main/core-3.svg" alt="">
 							<div class="">
-								<p class="service-title">Hire Dedicated Developers</p>
-								<p class="service-txt">Create your own team of developers for your software
-									development project on
-									short term, long term or permanent basis with guaranteed project delivery at affordable
-									prices.
+								<p class="service-title">Web Development</p>
+								<p class="service-txt">Our web developers create custom web and web application solutions. We
+									deliver web presence to help you grow your business using the best web technologies.
 								</p>
 								<p class="uk-margin-top xx">
 								</p>
@@ -260,11 +250,9 @@
 						<div class="uk-card core core-1 uk-text-center uk-card-default">
 							<img class="uk-margin-large-top my-img uk-margin-large-bottom" src="img/main/core-3.svg" alt="">
 							<div class="">
-								<p class="service-title">Hire Dedicated Developers</p>
-								<p class="service-txt">Create your own team of developers for your software
-									development project on
-									short term, long term or permanent basis with guaranteed project delivery at affordable
-									prices.
+								<p class="service-title">UI/UX Design</p>
+								<p class="service-txt">Starting from concept, information architecture, visual identity and
+									UI/UX design, our team delivers dazzling experiences for maximum user engagement.
 								</p>
 								<p class="uk-margin-top xx">
 								</p>
@@ -362,11 +350,11 @@
 		<div class="uk-flex" uk-grid>
 			<div class="uk-width-1-2@m main-title uk-margin-xlarge-top">
 				<h2 class="uk-title h2-title uk-margin-bottom">We Promise. We Deliver. </h2>
-				<p class="txt">We deliver web and mobile app development services to global businesses since 1997,
-					with 100%
-					project delivery success. Hire the best programmers at affordable prices. Our design-focused
-					approach and
-					project execution processes help you to deliver the right solutions.
+				<p class="txt">Have an idea? Work with us and see how it goes. We promise to go the extra mile for every
+					project that we take onboard.
+					<br>
+					<br>
+					The first 7 days are on us with ZERO upfront investment.
 				</p>
 				<button class="uk-button uk-button-default button-contact uk-margin-medium-top">Contact Us
 				</button>
