--- a/index.html
+++ b/index.html
@@ -52,11 +52,18 @@
 							</button>
 						</a>
 					</li>
-					<li>
-						<a href="">
-							<img src="img/icon/night.svg" alt="">
-						</a>
-					</li>
+					<ul>
+						<div class="">
+							<button style="width: 32px;" class="uk-button btn" type="button">
+								<img src="img/icon/russia.svg" alt="">
+							</button>
+							<div uk-dropdown="mode: click">
+								<a href="">
+									<img style="width: 32px;" src="img/icon/united-kingdom.svg" alt="">
+								</a>
+							</div>
+						</div>
+					</ul>
 				</ul>
 			</div>
 		</div>
@@ -195,7 +202,7 @@
 		<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
 
 			<ul class="uk-slider-items uk-grid uk-margin-medium-top ">
-				<li class="uk-width-2-5">
+				<li class="uk-width-2-5@m">
 					<div class="uk-panel my-card-service">
 						<div class="uk-card core core-1 uk-text-center uk-card-default">
 							<img class="uk-margin-large-top my-img uk-margin-large-bottom" src="img/main/core-1.svg" alt="">
@@ -213,7 +220,7 @@
 						</div>
 					</div>
 				</li>
-				<li class="uk-width-2-5">
+				<li class="uk-width-2-5@m">
 					<div class="uk-panel my-card-service">
 						<div class="uk-card core core-2 uk-text-center uk-card-default">
 							<img class="uk-margin-large-top my-img uk-margin-large-bottom" src="img/main/core-2.svg" alt="">
@@ -229,9 +236,9 @@
 						</div>
 					</div>
 				</li>
-				<li class="uk-width-2-5">
+				<li class="uk-width-2-5@m">
 					<div class="uk-panel my-card-service">
-						<div class="uk-card core core-1 uk-text-center uk-card-default">
+						<div class="uk-card core core-3 uk-text-center uk-card-default">
 							<img class="uk-margin-large-top my-img uk-margin-large-bottom" src="img/main/core-3.svg" alt="">
 							<div class="">
 								<p class="service-title">Web Development</p>
@@ -245,10 +252,10 @@
 						</div>
 					</div>
 				</li>
-				<li class="uk-width-2-5">
+				<li class="uk-width-2-5@m">
 					<div class="uk-panel my-card-service">
-						<div class="uk-card core core-1 uk-text-center uk-card-default">
-							<img class="uk-margin-large-top my-img uk-margin-large-bottom" src="img/main/core-3.svg" alt="">
+						<div class="uk-card core core-4 uk-text-center uk-card-default">
+							<img class="uk-margin-large-top my-img uk-margin-large-bottom" src="img/main/core-4.svg" alt="">
 							<div class="">
 								<p class="service-title">UI/UX Design</p>
 								<p class="service-txt">Starting from concept, information architecture, visual identity and
