--- a/service.html
+++ b/service.html
@@ -54,7 +54,7 @@
 					</li>
 					<li>
 						<a href="">
-							<img src="img/icon/night.svg" alt="">
+							<!--<img src="img/icon/night.svg" alt="">-->
 						</a>
 					</li>
 				</ul>
@@ -114,27 +114,34 @@
 								<li>Native iOS App Development</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Cross-platform App Development
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Wearable App Development
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Xamarin App Development
+								</li>
 							</ul>
 						</div>
 						<div class="uk-width-1-2@m">
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Native Android App Development
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Hybrid App Development
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>React Native App Development
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Flutter App Development
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -154,14 +161,13 @@
 			</div>
 			<div class="uk-width-1-2@m">
 				<div class="left-card">
-					<h2 class="h2-title  uk-margin-large-top">Mobile Apps Development
+					<h2 class="h2-title  uk-margin-large-top">Web Development
 					</h2>
-					<p class="txt">From B2B or B2E apps for enterprises, small businesses, and startups, we have a proven
-						track
-						record of offering high-impact, result driven and engaging mobile application development services.
-						IndiaNIC is a top mobile app development company that is renowned for delivering native Android app
-						development, native iOS app development, hybrid and cross-platform app development services to build
-						next-gen mobile applications using the latest technology stack.</p>
+					<p class="txt">Being a leading website application development company, our certified developers have
+						unparalleled expertise in working with the latest web technologies to deliver custom web solutions.
+						Whether creating a web presence for your company, an information hub for your business or empowering
+						your apps/IoT devices through backend- IndiaNIC does it all by covering a wide spectrum of web
+						solutions and framework.</p>
 					<div class="uk-text-center uk-margin">
 						<img class="service-icon" src="img/service/ic-technology-ios.svg" alt="">
 						<img class="service-icon" src="img/service/ic-technology-android.svg" alt="">
@@ -171,30 +177,38 @@
 					<div class="uk-flex uk-margin-top" uk-grid>
 						<div class="uk-width-1-2@m">
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Custom Website Development
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>eCommerce Store Development
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Full-Stack Development
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Progressive Web Apps
+								</li>
 							</ul>
 						</div>
 						<div class="uk-width-1-2@m">
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Web Application Development
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Custom CRM/ERP Software Apps
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Responsive Web Apps
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Bespoke CMS Development
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -208,14 +222,14 @@
 		<div class="uk-flex" uk-grid>
 			<div class="uk-width-1-2@m">
 				<div class="left-card">
-					<h2 class="h2-title  uk-margin-large-top">Mobile Apps Development
+					<h2 class="h2-title  uk-margin-large-top">UI/UX Design
+
 					</h2>
-					<p class="txt">From B2B or B2E apps for enterprises, small businesses, and startups, we have a proven
-						track
-						record of offering high-impact, result driven and engaging mobile application development services.
-						IndiaNIC is a top mobile app development company that is renowned for delivering native Android app
-						development, native iOS app development, hybrid and cross-platform app development services to build
-						next-gen mobile applications using the latest technology stack.</p>
+					<p class="txt">UI/UX design is the catalyst behind the success of any web or mobile app. IndiaNIC is a
+						leading web design and mobile app design agency with a knack of turning great ideas into meaningful
+						interactions. Starting from conceptualization, information architecture, visual identity, and UX
+						design; hire UI/UX designers from IndiaNIC for timely delivery of appealing websites and mobile apps
+						resulting maximum user engagement.</p>
 					<div class="uk-text-center uk-margin">
 						<img class="service-icon" src="img/service/ic-technology-ios.svg" alt="">
 						<img class="service-icon" src="img/service/ic-technology-android.svg" alt="">
@@ -225,30 +239,38 @@
 					<div class="uk-flex uk-margin-top" uk-grid>
 						<div class="uk-width-1-2@m">
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Wireframes Designing
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>High/Low fidelity Prototype
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Responsive Web Design
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>UX Analysis
+								</li>
 							</ul>
 						</div>
 						<div class="uk-width-1-2@m">
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Strategic Design Consulting
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Mobile App Design
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>Information Architecture
+								</li>
 							</ul>
 							<ul class="txt">
-								<li>Native iOS App Development</li>
+								<li>UI Design
+								</li>
 							</ul>
 						</div>
 					</div>
