--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 			<div class="uk-navbar-left uk-margin-left">
 				<div class="uk-navbar-nav">
-					<a href="#">
+					<a href="index.html">
 						<img class="uk-logo" src="img/logo/logo.svg" alt="">
 					</a>
 				</div>
@@ -32,16 +32,10 @@
 						<a href="">About</a>
 					</li>
 					<li>
-						<a href="">Services</a>
+						<a href="service.html">Services</a>
 					</li>
 					<li>
-						<a href="">Technolygy</a>
-					</li>
-					<li>
-						<a href="">Solutions</a>
-					</li>
-					<li>
-						<a href="#"> Work </a>
+						<a href="work.html"> Work </a>
 					</li>
 					<li>
 						<a href="">
@@ -372,6 +366,12 @@
 		</div>
 	</div>
 
+	<div class="fixed-contact">
+		<a href="">
+			<img class="contact" src="img/icon/telegram.png" alt="">
+		</a>
+	</div>
+
 	<footer class="uk-margin-top">
 		<di class="uk-container">
 			<hr>
@@ -379,7 +379,11 @@
 
 				<div class="uk-navbar-left uk-margin-left">
 					<ul class="uk-navbar-nav">
-						<li><img src="img/logo/logo.svg" alt=""></li>
+						<li>
+							<a href="index.html">
+								<img src="img/logo/logo.svg" alt="">
+							</a>
+						</li>
 					</ul>
 				</div>
 
@@ -389,16 +393,11 @@
 							<a class="txt-footer" href="">About</a>
 						</li>
 						<li>
-							<a class="txt-footer" href="">Services</a>
+							<a class="txt-footer" href="service.html">Services</a>
 						</li>
+
 						<li>
-							<a class="txt-footer" href="">Technolygy</a>
-						</li>
-						<li>
-							<a class="txt-footer" href="">Solutions</a>
-						</li>
-						<li>
-							<a class="txt-footer" href="#"> Work </a>
+							<a class="txt-footer" href="work.html"> Work </a>
 						</li>
 					</ul>
 				</div>
