--- a/service.html
+++ b/service.html
@@ -20,7 +20,7 @@
 
 			<div class="uk-navbar-left uk-margin-left">
 				<div class="uk-navbar-nav">
-					<a href="#">
+					<a href="index.html">
 						<img class="uk-logo" src="img/logo/logo.svg" alt="">
 					</a>
 				</div>
@@ -32,16 +32,10 @@
 						<a href="">About</a>
 					</li>
 					<li>
-						<a href="">Services</a>
+						<a href="service.html">Services</a>
 					</li>
 					<li>
-						<a href="">Technolygy</a>
-					</li>
-					<li>
-						<a href="">Solutions</a>
-					</li>
-					<li>
-						<a href="#"> Work </a>
+						<a href="work.html"> Work </a>
 					</li>
 					<li>
 						<a href="">
@@ -157,7 +151,7 @@
 
 		<div class="uk-flex" uk-grid>
 			<div class="uk-width-1-2@m">
-				<img src="img/service/app-development.webp" alt="">
+				<img src="img/service/web-development.webp" alt="">
 			</div>
 			<div class="uk-width-1-2@m">
 				<div class="left-card">
@@ -169,10 +163,14 @@
 						your apps/IoT devices through backend- IndiaNIC does it all by covering a wide spectrum of web
 						solutions and framework.</p>
 					<div class="uk-text-center uk-margin">
-						<img class="service-icon" src="img/service/ic-technology-ios.svg" alt="">
-						<img class="service-icon" src="img/service/ic-technology-android.svg" alt="">
-						<img class="service-icon" src="img/service/ic-technology-react-native1x.svg" alt="">
-						<img class="service-icon" src="img/service/ic-technology-phone-gap.svg" alt="">
+						<img class="service-icon" src="img/service/ic-technology-html5.svg" alt="">
+						<img class="service-icon" src="img/service/ic-technology-php.svg" alt="">
+						<img class="service-icon" src="img/service/ic-technology-wordpress.svg" alt="">
+						<img class="service-icon" src="img/service/ic-technology-joomla.svg" alt="">
+						<img class="service-icon" src="img/service/ic-technology-drupal.svg" alt="">
+						<img class="service-icon" src="img/service/ic-technology-node-js.svg" alt="">
+
+
 					</div>
 					<div class="uk-flex uk-margin-top" uk-grid>
 						<div class="uk-width-1-2@m">
@@ -231,10 +229,13 @@
 						design; hire UI/UX designers from IndiaNIC for timely delivery of appealing websites and mobile apps
 						resulting maximum user engagement.</p>
 					<div class="uk-text-center uk-margin">
-						<img class="service-icon" src="img/service/ic-technology-ios.svg" alt="">
-						<img class="service-icon" src="img/service/ic-technology-android.svg" alt="">
-						<img class="service-icon" src="img/service/ic-technology-react-native1x.svg" alt="">
-						<img class="service-icon" src="img/service/ic-technology-phone-gap.svg" alt="">
+						<img class="service-icon" src="img/service/ic-technology-photoshop.svg" alt="">
+						<img class="service-icon" src="img/service/ic-technology-figma.svg" alt="">
+						<img class="service-icon" src="img/service/ic-technology-adobe-illustrator.svg" alt="">
+						<img class="service-icon" src="img/service/ic-technology-sketch.svg" alt="">
+						<img class="service-icon" src="img/service/ic-technology-invision.svg" alt="">
+
+
 					</div>
 					<div class="uk-flex uk-margin-top" uk-grid>
 						<div class="uk-width-1-2@m">
@@ -279,7 +280,7 @@
 
 			</div>
 			<div class="uk-width-1-2@m">
-				<img src="img/service/app-development.webp" alt="">
+				<img src="img/service/ui-ux-design.webp" alt="">
 			</div>
 		</div>
 	</div>
@@ -312,7 +313,9 @@
 
 				<div class="uk-navbar-left uk-margin-left">
 					<ul class="uk-navbar-nav">
-						<li><img src="img/logo/logo.svg" alt=""></li>
+						<li><a href="index.html">
+								<img src="img/logo/logo.svg" alt="">
+							</a></li>
 					</ul>
 				</div>
 
@@ -322,16 +325,10 @@
 							<a class="txt-footer" href="">About</a>
 						</li>
 						<li>
-							<a class="txt-footer" href="">Services</a>
+							<a class="txt-footer" href="service.html">Services</a>
 						</li>
 						<li>
-							<a class="txt-footer" href="">Technolygy</a>
-						</li>
-						<li>
-							<a class="txt-footer" href="">Solutions</a>
-						</li>
-						<li>
-							<a class="txt-footer" href="#"> Work </a>
+							<a class="txt-footer" href="work.html"> Work </a>
 						</li>
 					</ul>
 				</div>
