--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-	<header>
+	<header class="main-bg">
 		<div uk-sticky class="uk-navbar-container uk-padding-top" uk-navbar>
 
 			<div class="uk-navbar-left uk-margin-left">
@@ -61,6 +61,25 @@
 				</ul>
 			</div>
 		</div>
+
+		<div class="uk-container uk-margin-medium-top ">
+			<div class="uk-flex" uk-grid>
+				<div class="uk-width-1-2@m main-title">
+					<h2 class="uk-title title uk-margin-bottom">Your Trusted Development Partner </h2>
+					<p class="txt1">We deliver web and mobile app development services to global businesses since 1997, with
+						100%
+						project delivery success. Hire the best programmers at affordable prices. Our design-focused approach
+						and
+						project execution processes help you to deliver the right solutions.
+					</p>
+					<button class="uk-button uk-button-default button-contact">What we do
+
+					</button>
+				</div>
+
+			</div>
+		</div>
+		</div>
 	</header>
 	<!-- This is a button toggling the modal with the default close button -->
 
@@ -80,24 +99,8 @@
 	<!-- This is a button toggling the modal with the outside close button -->
 
 
-	<div class="uk-container uk-margin-medium-top">
-		<div class="uk-flex" uk-grid>
-			<div class="uk-width-1-2@m main-title">
-				<h2 class="uk-title title uk-margin-bottom">Your Trusted Development Partner </h2>
-				<p class="txt">We deliver web and mobile app development services to global businesses since 1997, with 100%
-					project delivery success. Hire the best programmers at affordable prices. Our design-focused approach and
-					project execution processes help you to deliver the right solutions.
-				</p>
-				<button class="uk-button uk-button-default button-contact uk-margin-small-top">What we do
-				</button>
-			</div>
-			<div class="uk-width-1-2@m">
-				<img class="banner" src="img/main/banner-img.svg" alt="Image">
-			</div>
-		</div>
-	</div>
 
-	<div class="uk-container uk-margin-xlarge-top">
+	<div class="uk-container uk-margin-large-top">
 		<h2 class="h2-title">Hire the Best Web and Mobile App Developers
 		</h2>
 
@@ -193,10 +196,11 @@
 
 
 
-		<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
+		<div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
+			uk-slider="autoplay: true;autoplay-interval: 5000">
 
 			<ul class="uk-slider-items uk-grid uk-margin-medium-top ">
-				<li class="uk-width-2-5@m">
+				<li class="uk-width-1-3@m">
 					<div class="uk-panel my-card-service">
 						<div class="uk-card core core-1 uk-text-center uk-card-default">
 							<img class="uk-margin-large-top my-img uk-margin-large-bottom" src="img/main/core-1.svg" alt="">
@@ -214,7 +218,7 @@
 						</div>
 					</div>
 				</li>
-				<li class="uk-width-2-5@m">
+				<li class="uk-width-1-3@m">
 					<div class="uk-panel my-card-service">
 						<div class="uk-card core core-2 uk-text-center uk-card-default">
 							<img class="uk-margin-large-top my-img uk-margin-large-bottom" src="img/main/core-2.svg" alt="">
@@ -230,7 +234,7 @@
 						</div>
 					</div>
 				</li>
-				<li class="uk-width-2-5@m">
+				<li class="uk-width-1-3@m">
 					<div class="uk-panel my-card-service">
 						<div class="uk-card core core-3 uk-text-center uk-card-default">
 							<img class="uk-margin-large-top my-img uk-margin-large-bottom" src="img/main/core-3.svg" alt="">
@@ -246,7 +250,7 @@
 						</div>
 					</div>
 				</li>
-				<li class="uk-width-2-5@m">
+				<li class="uk-width-1-3@m">
 					<div class="uk-panel my-card-service">
 						<div class="uk-card core core-4 uk-text-center uk-card-default">
 							<img class="uk-margin-large-top my-img uk-margin-large-bottom" src="img/main/core-4.svg" alt="">
@@ -274,72 +278,75 @@
 		</div>
 	</div>
 
+	<section class="animate">
 
-	<div class="uk-container uk-container-small uk-margin-large-top">
-		<div class="uk-card work-card blue uk-card-default uk-flex" uk-grid>
-			<div class="uk-width-1-2@m">
-				<div class="uk-margin-medium-top">
-					<div class="top-title">Samsung Business</div>
-					<div class="mid-title">Корпоративный сайт, с помощью которого увеличи продажи компании</div>
-					<div class="review">
-						<div class="review-txt">
-							"The speed and agility of the team in delivering desirable results was remarkable”
-						</div>
-						<div>
-							<div class="txt-author">Carl Lindgren</div>
-							<div class="txt-dd">Founder</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="uk-width-1-2@m">
-				<img src="img/main/banner-img.svg" alt="">
-			</div>
-		</div>
-		<div class="uk-card work-card blue uk-card-default uk-flex" uk-grid>
-			<div class="uk-width-1-2@m">
-				<div class="uk-margin-medium-top">
-					<div class="top-title">Samsung Business</div>
-					<div class="mid-title">Корпоративный сайт, с помощью которого увеличи продажи компании</div>
-					<div class="review">
-						<div class="review-txt">
-							"The speed and agility of the team in delivering desirable results was remarkable”
-						</div>
-						<div>
-							<div class="txt-author">Carl Lindgren</div>
-							<div class="txt-dd">Founder</div>
+		<div class="uk-container work-container uk-margin-large-top">
+			<div class="uk-card work-card samsung uk-card-default uk-flex" uk-grid>
+				<div class="uk-width-1-2@m">
+					<div class="uk-margin-medium-top">
+						<div class="top-title">Samsung Business</div>
+						<div class="mid-title">Корпоративный сайт, с помощью которого увеличи продажи компании</div>
+						<div class="review">
+							<div class="review-txt">
+								"The speed and agility of the team in delivering desirable results was remarkable”
+							</div>
+							<div>
+								<div class="txt-author">Carl Lindgren</div>
+								<div class="txt-dd">Founder</div>
+							</div>
 						</div>
 					</div>
 				</div>
+				<div class="uk-width-1-2@m">
+					<img src="img/main/banner-img.svg" alt="">
+				</div>
 			</div>
-			<div class="uk-width-1-2@m">
-				<img src="img/main/banner-img.svg" alt="">
-			</div>
-		</div>
-		<div class="uk-card work-card blue uk-card-default uk-flex" uk-grid>
-			<div class="uk-width-1-2@m">
-				<div class="uk-margin-medium-top">
-					<div class="top-title">Samsung Business</div>
-					<div class="mid-title">Корпоративный сайт, с помощью которого увеличи продажи компании</div>
-					<div class="review">
-						<div class="review-txt">
-							"The speed and agility of the team in delivering desirable results was remarkable”
-						</div>
-						<div>
-							<div class="txt-author">Carl Lindgren</div>
-							<div class="txt-dd">Founder</div>
+			<div class="uk-card work-card madumarov uk-card-default uk-flex" uk-grid>
+				<div class="uk-width-1-2@m">
+					<div class="uk-margin-medium-top">
+						<div class="top-title">Samsung Business</div>
+						<div class="mid-title">Корпоративный сайт, с помощью которого увеличи продажи компании</div>
+						<div class="review">
+							<div class="review-txt">
+								"The speed and agility of the team in delivering desirable results was remarkable”
+							</div>
+							<div>
+								<div class="txt-author">Carl Lindgren</div>
+								<div class="txt-dd">Founder</div>
+							</div>
 						</div>
 					</div>
 				</div>
+				<div class="uk-width-1-2@m">
+					<img src="img/main/banner-img.svg" alt="">
+				</div>
 			</div>
-			<div class="uk-width-1-2@m">
-				<img src="img/main/banner-img.svg" alt="">
+			<div class="uk-card work-card vega uk-card-default uk-flex" uk-grid>
+				<div class="uk-width-1-2@m">
+					<div class="uk-margin-medium-top">
+						<div class="top-title">Samsung Business</div>
+						<div class="mid-title">Корпоративный сайт, с помощью которого увеличи продажи компании</div>
+						<div class="review">
+							<div class="review-txt">
+								"The speed and agility of the team in delivering desirable results was remarkable”
+							</div>
+							<div>
+								<div class="txt-author">Carl Lindgren</div>
+								<div class="txt-dd">Founder</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="uk-width-1-2@m">
+					<img src="img/main/banner-img.svg" alt="">
+				</div>
+			</div>
+			<div class="uk-text-center uk-margin-small-top ">
+				<a class="txt-all" href="">Показать все</a>
 			</div>
 		</div>
-		<div class="uk-text-center uk-margin-small-top ">
-			<a class="txt-all" href="">Показать все</a>
-		</div>
-	</div>
+	</section>
+
 
 
 
@@ -424,6 +431,7 @@
 	<script src=" js/uikit.min.js">
 	</script>
 	<script src="js/uikit-icons.min.js"></script>
+	<script src="js/main.js"></script>
 </body>
 
 </html>
