--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							</button>
 						</a>
 					</li>
-					<ul>
+					<!--<ul>
 						<div class="">
 							<button style="width: 32px;" class="uk-button btn" type="button">
 								<img src="img/icon/russia.svg" alt="">
@@ -57,7 +57,7 @@
 								</a>
 							</div>
 						</div>
-					</ul>
+					</ul>-->
 				</ul>
 			</div>
 		</div>
@@ -72,7 +72,7 @@
 						and
 						project execution processes help you to deliver the right solutions.
 					</p>
-					<button class="uk-button uk-button-default button-contact">What we do
+					<button class="uk-button button-contact1">What we do
 
 					</button>
 				</div>
